--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,181 @@
 @charset "utf-8";
+
+a {
+  text-decoration: none;
+}
+
+i {
+  color: #777;
+}
+
+.is_flex {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header {
+  background: #fff;
+  position: sticky;
+  padding: 15px;
+}
+
+.inner {
+  width: 1100px;
+  margin: 0 auto;
+}
+
+.contact {
+  background-color: #6ba7eb;
+  font-size: 12px;
+  padding: 12px 14px;
+}
+
+.contact a {
+  color: #fff;
+}
+
+.keyvisual {
+  display: inline-block;
+  padding-top: 400px;
+  padding-bottom: 400px;
+}
+
+.background_image {
+  background-image: url(../img/keyvisual/keyvisual.jpg) ;
+  background-size:cover;
+}
+
+.main_title {
+  font-size: 65px;
+  font-weight: 700;
+  color: #6ba7eb;
+  white-space: nowrap;
+}
+
+.sub_title {
+  font-size: 40px;
+  font-weight: 700;
+  color: #fff;
+  margin-top: 30px;
+}
+
+.work {
+  background: #e3f2fd;
+  padding-top: 50px;
+}
+
+.img_pc {
+  flex: 4;
+}
+
+div.inner img {
+  width: 250px;
+}
+
+.work_inner {
+  margin-top: 10px;
+  flex: 6;
+}
+
+.work_text {
+  margin-top: 35px;
+  font-size: 15px;
+  line-height: 18px;
+  word-break: break-all;
+}
+
+.skills {
+  background: #fff;
+  padding: 50px 0 70px;
+}
+
+div.skills_inner img {
+  width: 300px;
+}
+
+.skills_content {
+  margin-top: 50px;
+  flex-wrap: wrap;
+}
+
+.skills_content :not(:nth-child(1),:nth-child(4)) {
+  margin-left: 100px;
+}
+
+.skills_content :not(:nth-child(1),:nth-child(2),:nth-child(3)) {
+  margin-top: 100px;
+}
+
+.plan {
+  background: #d0dfea;
+  padding: 50px 0 ;
+}
+
+.table {
+  margin-top: 50px;
+}
+
+.cell--table {
+  table-layout: fixed;
+}
+
+th[scope='col'] {
+  background-color: #6ba7eb;
+}
+
+.cell--table th:not(:first-child), .cell--table td:not(:first-child) {
+  border-left: 2px solid #fff;
+  padding: 10px;
+  font-size: 16px;
+  line-height: 26px;
+}
+
+.cell--table tr {
+  background: #f9f9d9;
+}
+
+.cell--table tr:nth-child(even) {
+  background: #e0efff;
+}
+
+h3 {
+  font-size: 40px;
+  letter-spacing: 10px;
+}
+
+.sns {
+  background: #e3f2fd;
+  padding: 200px;
+}
+
+.sns_inner,.cell--table td,.plan,.skills,.work_inner,.title,.img_pc {
+  text-align: center;
+}
+
+.is_flex_a {
+  display: flex;
+  justify-content: center;
+}
+
+.sns_inner li {
+  margin: 50 0;
+  width: 185px;
+  color: #8c8c8c;
+  overflow: hidden;
+  font-size: 40px;
+}
+
+.footer {
+  background: #cfd8dc;
+  padding: 20px 0 25px;
+  text-align: right;
+}
+
+.footer p {
+  font-size: 10px;
+  letter-spacing: 0.5px;
+}
+
+.footer,.cell--table,.background_image {
+  width: 100%;
+}
