--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,14 @@ i {
   z-index:10
 }
 
+.drawer_hidden {
+  display: none;
+}
+
+.drawer_open {
+  position: relative;
+}
+
 .inner {
   width: 1100px;
   margin: 0 auto;
@@ -66,11 +74,12 @@ i {
   font-size: 40px;
   font-weight: 700;
   color: #fff;
+  white-space: nowrap;
 }
 
 .work {
   background: #e3f2fd;
-  padding-top: 50px;
+  padding: 50px 0 0 0;
 }
 
 .img_pc {
@@ -111,8 +120,19 @@ div.skills_inner img {
   margin-left: 100px;
 }
 
+.skills_content ::nth-child(3n-2) {
+  margin-top: 0px;
+}
+
 .skills_content :not(:nth-child(1),:nth-child(2),:nth-child(3)) {
   margin-top: 100px;
+}
+
+.is_flex_a::after {
+  display: block;
+  content:"";
+  width: 300px;
+  margin-left: 100px;
 }
 
 .sk_img {
@@ -174,7 +194,7 @@ h3 {
   text-align: center;
 }
 
-.is_flex_a {
+.is_flex_a, .is_flex_b {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -207,4 +227,137 @@ h3 {
 
 .header,.footer,.cell--table,.background_image {
   width: 100%;
+}
+
+#menu-toggle {
+  display: none;
+}
+
+@media screen and  (max-width: 1199px) {
+
+  .inner {
+    width: 97%;
+  }
+
+  .work .is_flex {
+    display: block;
+  }
+
+  .work {
+    padding: 50px 0;
+  }
+
+  .is_flex_a {
+    display: block;
+  }
+
+  .skills_content :not(:nth-child(3n-2)) {
+    margin-top: 0px;
+    margin-left: 0px;
+  }
+
+  .skills_content ::nth-child(3n-2) {
+    margin-top: 80px;
+  }
+
+}
+
+@media screen and (min-width:768px) and (max-width: 1199px) {
+
+  .keyvisual {
+    padding: 250px 0;
+  }
+
+}
+
+@media screen and (max-width: 767px) {
+
+  /*ハンバーガーアイコンの設置部分*/
+.drawer_open {
+  display: flex;
+  height: 30px;
+  width: 30px;
+  justify-content: center;
+  align-items: center;
+  z-index: 100;
+  cursor: pointer;
+}
+
+/*ハンバーガーメニューのアイコン*/
+.drawer_open span, .drawer_open span::before, .drawer_open span::after {
+  position: absolute;
+  content: "";
+  display: block;
+  height: 3px;
+  width: 25px;
+  border-radius: 10px;
+  background: #333;
+  transition: 0.3s;
+}
+
+/*三本線の一番上の位置*/
+.drawer_open span::before {
+  bottom: 8px;
+}
+
+/*三本線の一番下の位置*/
+.drawer_open span::after {
+  top: 8px;
+}
+
+/*クリック時に透明にする*/
+#drawer_input:checked ~ .drawer_open span {
+  background: rgba(255, 255, 255, 0);
+}
+
+/*メニューのデザイン*/
+.nav_content {
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 100%;
+  z-index: 99;
+  background: #fff;
+  transition: 0.3s;
+}
+
+#drawer_input:checked ~ .nav_content {
+  left: 0;
+}
+
+  .keyvisual {
+    padding: 200px 0;
+  }
+
+  .main_title {
+    font-size: 40px;
+  }
+
+  .sub_title{
+    font-size: 30px;
+  }
+
+  .cell--table th:not(:first-child), .cell--table th:first-child {
+    font-size: 14px;
+    line-height: 22px;
+  }
+
+  .cell--table td:not(:first-child) {
+    font-size: 12px;
+  }
+
+  .sns {
+    padding: 50px 15px;
+  }
+
+  .sns_inner i {
+    padding: 50px 0;
+    width: 100%;
+  }
+
+  .is_flex_b {
+    display: block;
+  }
+
 }
