--- a/css/style.css
+++ b/css/style.css
@@ -307,7 +307,6 @@ h3 {
 
   /*メニューのデザイン*/
   .nav_content {
-    width: 100%;
     height: 100%;
     position: fixed;
     top: 0;
@@ -315,6 +314,10 @@ h3 {
     z-index: 99;
     background: #fff;
     transition: 0.3s;
+  }
+
+  .nav_content, .sns_inner i {
+    width: 100%;
   }
 
   #drawer_input:checked ~ .nav_content {
@@ -348,7 +351,6 @@ h3 {
 
   .sns_inner i {
     padding: 50px 0;
-    width: 100%;
   }
 
   .is_flex_b {
